crates/marion-tui/tests/snapshots/home_screens__setup_profiles_listed_with_the_login_command_shown.snap
---
source: crates/marion-tui/tests/home_screens.rs
expression: "at_every_size(&screen(Body::Setup(&v), input, \"profiles\"))"
---
--- 80x24 ---
 ◆ marion  ~/code/acme-api                        Start   Watch ◐2   Setup   ?
 ──────────────────────────────────────────────────────────────────────────────

  AGENT TYPES   7 · custom ones come from .marion/agents.toml
  ● claude   ● claude-orchestrator   ● codex   ◐ gemini   ● opencode
  ● reviewer   ● migrator
  ✓ .marion/agents.toml: 2 types, valid

  API KEYS   3 keys
  ● anthropic   anthropic
  ● openrouter  openrouter
  ● openrouter  openrouter:work
  keys in the macOS Keychain · a adds one · x removes the selected

  LOGINS   3 logins
  ● claude    work      default · logged in · last limit allowed_warning (fiv…
❯ ◐ codex     cx        logged out
      log in yourself:
      CODEX_HOME='/Users/me/.local/share/marion/profiles/codex/cx' codex login

 ╭────────────────────────────────────────────────────────────────────────────╮
 │ ❯ marion profile use codex cx                                            u │
 ╰────────────────────────────────────────────────────────────────────────────╯
  j/k move · a add login · u use · x remove                            F1 help
--- styles ---
   85  Style::new().fg(Color::Reset).bg(Color::Reset)  "claudeclaude-orchestrato"
    8  Style::new().fg(Color::Reset).bg(Color::Reset).bold()  "marioncx"
   23  Style::new().fg(Color::Reset).bg(Color::Reset).bold().dim()  "AGENTTYPESAPIKEYSLOGINS"
  543  Style::new().fg(Color::Reset).bg(Color::Reset).dim()  "~/code/acme-apiStartWatc"
   25  Style::new().fg(Color::Rgb(193, 95, 60)).bg(Color::Reset)  "◆reviewermigratordefault"
   79  Style::new().fg(Color::Rgb(193, 95, 60)).bg(Color::Reset).bold()  "Setupax❯CODEX_HOME='/Use"
   11  Style::new().green().bg(Color::Reset)  "●●●●●●✓●●●●"
   13  Style::new().yellow().bg(Color::Reset)  "◐2◐◐loggedout"

--- 100x30 ---
 ◆ marion  ~/code/acme-api                                            Start   Watch ◐2   Setup   ?
 ──────────────────────────────────────────────────────────────────────────────────────────────────

  ◐ gemini       0.9.1     sign-in needed              headless · pane
  ● opencode     1.2.3     ready                       headless · pane · ACP
  ✗ copilot      0.0.339   too old, needs ≥ 0.0.350    headless · ACP
  ○ agy          —         not installed               —

  PROJECT
  repo ~/code/acme-api · state ~/.local/state/marion · agents .marion/agents.toml

  AGENT TYPES   7 · custom ones come from .marion/agents.toml
  ● claude   ● claude-orchestrator   ● codex   ◐ gemini   ● opencode   ● reviewer   ● migrator
  ✓ .marion/agents.toml: 2 types, valid

  API KEYS   3 keys
  ● anthropic   anthropic
  ● openrouter  openrouter
  ● openrouter  openrouter:work
  keys in the macOS Keychain · a adds one · x removes the selected

  LOGINS   3 logins
  ● claude    work      default · logged in · last limit allowed_warning (five_hour)
❯ ◐ codex     cx        logged out
      log in yourself: CODEX_HOME='/Users/me/.local/share/marion/profiles/codex/cx' codex login

 ╭────────────────────────────────────────────────────────────────────────────────────────────────╮
 │ ❯ marion profile use codex cx                                                                u │
 ╰────────────────────────────────────────────────────────────────────────────────────────────────╯
  j/k move · a add login · u use · x remove                                                F1 help
--- styles ---
  164  Style::new().fg(Color::Reset).bg(Color::Reset)  "geminiopencodecopilotagy"
    8  Style::new().fg(Color::Reset).bg(Color::Reset).bold()  "marioncx"
   30  Style::new().fg(Color::Reset).bg(Color::Reset).bold().dim()  "PROJECTAGENTTYPESAPIKEYS"
  705  Style::new().fg(Color::Reset).bg(Color::Reset).dim()  "~/code/acme-apiStartWatc"
   25  Style::new().fg(Color::Rgb(193, 95, 60)).bg(Color::Reset)  "◆reviewermigratordefault"
   79  Style::new().fg(Color::Rgb(193, 95, 60)).bg(Color::Reset).bold()  "Setupax❯CODEX_HOME='/Use"
   12  Style::new().green().bg(Color::Reset)  "●●●●●●●✓●●●●"
   21  Style::new().red().bg(Color::Reset)  "✗tooold,needs≥0.0.350"
   27  Style::new().yellow().bg(Color::Reset)  "◐2◐sign-inneeded◐◐logged"

--- 160x50 ---
 ◆ marion  ~/code/acme-api                                                                                                        Start   Watch ◐2   Setup   ?
 ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────

  HARNESSES   3 of 6 ready

  ● claude       2.1.268   ready                       headless · pane · channel push
  ● codex        0.61.0    ready                       headless · pane · ACP
  ◐ gemini       0.9.1     sign-in needed              headless · pane
  ● opencode     1.2.3     ready                       headless · pane · ACP
  ✗ copilot      0.0.339   too old, needs ≥ 0.0.350    headless · ACP
  ○ agy          —         not installed               —

  PROJECT
  repo ~/code/acme-api · state ~/.local/state/marion · agents .marion/agents.toml

  AGENT TYPES   7 · custom ones come from .marion/agents.toml
  ● claude   ● claude-orchestrator   ● codex   ◐ gemini   ● opencode   ● reviewer   ● migrator
  ✓ .marion/agents.toml: 2 types, valid

  API KEYS   3 keys
  ● anthropic   anthropic
  ● openrouter  openrouter
  ● openrouter  openrouter:work
  keys in the macOS Keychain · a adds one · x removes the selected

  LOGINS   3 logins
  ● claude    work      default · logged in · last limit allowed_warning (five_hour)
❯ ◐ codex     cx        logged out
      log in yourself: CODEX_HOME='/Users/me/.local/share/marion/profiles/codex/cx' codex login
  ⠹ opencode  oc        checking…
  a adds one · u makes the selected the default · x removes it, keeping its directory · marion never logs in for you















 ╭────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
 │ ❯ marion profile use codex cx                                                                                                                            u │
 ╰────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
  j/k move · a add login · u use · x remove                                                                                                            F1 help
--- styles ---
  177  Style::new().fg(Color::Reset).bg(Color::Reset)  "claudecodexgeminiopencod"
    8  Style::new().fg(Color::Reset).bg(Color::Reset).bold()  "marioncx"
   39  Style::new().fg(Color::Reset).bg(Color::Reset).bold().dim()  "HARNESSESPROJECTAGENTTYP"
 1064  Style::new().fg(Color::Reset).bg(Color::Reset).dim()  "~/code/acme-apiStartWatc"
   26  Style::new().fg(Color::Rgb(193, 95, 60)).bg(Color::Reset)  "◆reviewermigratordefault"
   82  Style::new().fg(Color::Rgb(193, 95, 60)).bg(Color::Reset).bold()  "Setupax❯CODEX_HOME='/Use"
   14  Style::new().green().bg(Color::Reset)  "●●●●●●●●●✓●●●●"
   21  Style::new().red().bg(Color::Reset)  "✗tooold,needs≥0.0.350"
   27  Style::new().yellow().bg(Color::Reset)  "◐2◐sign-inneeded◐◐logged"
