crates/marion-tui/tests/snapshots/home_screens__watch_blocked_node_says_what_it_needs.snap
---
source: crates/marion-tui/tests/home_screens.rs
expression: "at_every_size(&screen(Body::Watch(&v), input, \"watch\"))"
---
--- 80x24 ---
 ◆ marion  ~/code/acme-api                        Start   Watch ◐2   Setup   ?
 ──────────────────────────────────────────────────────────────────────────────

  NODES   6 · 2 running · Σ2.1M · 2 need you

  ● claude orchestrator 5e1a     ⠋  12m04s   waiting on 2 children
  ├─ ● codex impl a1f0           ⠸   2m17s   editing src/limits/bucket.rs
❯ ├─ ◐ codex impl 91cd               3m02s   asks to write .github/workflows/…
  │    └ TASK             Wire the limiter into CI
  │                       ✓ 2 criteria · $ 1 check
  │      NEEDS YOU        permission to write .github/workflows/ci.yml
  │      RUNNING          14:24:14  “I'll add a token bucket keyed by API key…
  │                       14:24:21  ~ src/limits/bucket.rs
  │                       ↑ 2 earlier   K scrolls back
  │      TOKENS           38k in · 3.1k out · 30k cached
  ├─ ✗ codex impl 7b2e               4m50s   exit 101: 3 tests failed
  └─ ✓ codex impl 3c33               6m41s   landed marion/t-3c33
  ✓ claude review 88f2              1h ago   landed marion/t-88f2


 ╭────────────────────────────────────────────────────────────────────────────╮
 │ ❯ marion attach 01a093dc-91cd                              answer it there │
 ╰────────────────────────────────────────────────────────────────────────────╯
  j/k move · enter attach · s steer · x cancel · c copy merge      ? shortcuts
--- styles ---
   88  Style::new().fg(Color::Reset).bg(Color::Reset)  "claudecodeximpl91cdWiret"
   11  Style::new().fg(Color::Reset).bg(Color::Reset).bold()  "marioncodex"
   42  Style::new().fg(Color::Reset).bg(Color::Reset).bold().dim()  "NODESTASKNEEDSYOURUNNING"
  638  Style::new().fg(Color::Reset).bg(Color::Reset).dim()  "~/code/acme-apiStartSetu"
   14  Style::new().fg(Color::Rgb(193, 95, 60)).bg(Color::Reset)  "◆⠋12m04s⠸2m17s"
    8  Style::new().fg(Color::Rgb(193, 95, 60)).bg(Color::Reset).bold()  "Watch❯K❯"
    2  Style::new().green().bg(Color::Reset)  "●●"
   21  Style::new().red().bg(Color::Reset)  "✗exit101:3testsfailed"
   74  Style::new().yellow().bg(Color::Reset)  "◐2◐askstowrite.github/wo"

--- 100x30 ---
 ◆ marion  ~/code/acme-api                                            Start   Watch ◐2   Setup   ?
 ──────────────────────────────────────────────────────────────────────────────────────────────────

  NODES   6 · 2 running · Σ2.1M · 2 need you

  ● claude orchestrator 5e1a     ⠋  12m04s    312k  Σ1.3M/5M   waiting on 2 children
  ├─ ● codex impl a1f0           ⠸   2m17s     88k             editing src/limits/bucket.rs
❯ ├─ ◐ codex impl 91cd               3m02s     41k             asks to write .github/workflows/ci…
  │    └ TASK             Wire the limiter into CI
  │                       + marion: When you have finished, call the `report` tool of the marion …
  │                       ✓ cargo test passes
  │                       ✓ 100 req/min per key, 429 after
  │                       $ cargo test -q limits
  │      NEEDS YOU        permission to write .github/workflows/ci.yml
  │      RUNNING          14:24:00  read_file src/limits/mod.rs
  │                       14:24:07  read_file Cargo.toml
  │                       14:24:14  “I'll add a token bucket keyed by API key.”
  │                       14:24:21  ~ src/limits/bucket.rs
  │      TOKENS           38k in · 3.1k out · 30k cached
  ├─ ✗ codex impl 7b2e               4m50s    120k             exit 101: 3 tests failed
  └─ ✓ codex impl 3c33               6m41s    197k             landed marion/t-3c33
  ✓ claude review 88f2              1h ago     54k             landed marion/t-88f2




 ╭────────────────────────────────────────────────────────────────────────────────────────────────╮
 │ ❯ marion attach 01a093dc-91cd                                                  answer it there │
 ╰────────────────────────────────────────────────────────────────────────────────────────────────╯
  j/k move · enter attach · s steer · x cancel · c copy merge · ! next attention       ? shortcuts
--- styles ---
  190  Style::new().fg(Color::Reset).bg(Color::Reset)  "claudecodeximpl91cdWiret"
   11  Style::new().fg(Color::Reset).bg(Color::Reset).bold()  "marioncodex"
   43  Style::new().fg(Color::Reset).bg(Color::Reset).bold().dim()  "NODESTASKNEEDSYOURUNNING"
  786  Style::new().fg(Color::Reset).bg(Color::Reset).dim()  "~/code/acme-apiStartSetu"
   14  Style::new().fg(Color::Rgb(193, 95, 60)).bg(Color::Reset)  "◆⠋12m04s⠸2m17s"
    7  Style::new().fg(Color::Rgb(193, 95, 60)).bg(Color::Reset).bold()  "Watch❯❯"
    2  Style::new().green().bg(Color::Reset)  "●●"
   21  Style::new().red().bg(Color::Reset)  "✗exit101:3testsfailed"
   76  Style::new().yellow().bg(Color::Reset)  "◐2◐askstowrite.github/wo"

--- 160x50 ---
 ◆ marion  ~/code/acme-api                                                                                                        Start   Watch ◐2   Setup   ?
 ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────

  NODES   6 · 2 running · Σ2.1M · 2 need you

  ● claude orchestrator 5e1a     ⠋  12m04s    312k  Σ1.3M/5M   waiting on 2 children
  ├─ ● codex impl a1f0           ⠸   2m17s     88k             editing src/limits/bucket.rs
❯ ├─ ◐ codex impl 91cd               3m02s     41k             asks to write .github/workflows/ci.yml
  │    └ TASK             Wire the limiter into CI
  │                       + marion: When you have finished, call the `report` tool of the marion MCP server exactly once.
  │                       ✓ cargo test passes
  │                       ✓ 100 req/min per key, 429 after
  │                       $ cargo test -q limits
  │      NEEDS YOU        permission to write .github/workflows/ci.yml
  │      RUNNING          14:24:00  read_file src/limits/mod.rs
  │                       14:24:07  read_file Cargo.toml
  │                       14:24:14  “I'll add a token bucket keyed by API key.”
  │                       14:24:21  ~ src/limits/bucket.rs
  │      TOKENS           38k in · 3.1k out · 30k cached
  ├─ ✗ codex impl 7b2e               4m50s    120k             exit 101: 3 tests failed
  └─ ✓ codex impl 3c33               6m41s    197k             landed marion/t-3c33
  ✓ claude review 88f2              1h ago     54k             landed marion/t-88f2

  ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
  ACTIVITY

  14:31  ✓ 3c33  landed marion/t-3c33 · 3 files +84 −12
  14:30  ✗ 7b2e  exit 101 · 3 tests failed in limits::bucket
  14:29  ◐ 91cd  asks to write .github/workflows/ci.yml
  14:29  ● a1f0  spawned by 5e1a · codex impl
  14:24  ● 5e1a  started · claude opus















 ╭────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
 │ ❯ marion attach 01a093dc-91cd                                                                                                              answer it there │
 ╰────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
  j/k move · enter attach · s steer · x cancel · c copy merge · ! next attention                                                                   ? shortcuts
--- styles ---
  211  Style::new().fg(Color::Reset).bg(Color::Reset)  "claudecodeximpl91cdWiret"
   11  Style::new().fg(Color::Reset).bg(Color::Reset).bold()  "marioncodex"
   51  Style::new().fg(Color::Reset).bg(Color::Reset).bold().dim()  "NODESTASKNEEDSYOURUNNING"
 1311  Style::new().fg(Color::Reset).bg(Color::Reset).dim()  "~/code/acme-apiStartSetu"
   14  Style::new().fg(Color::Rgb(193, 95, 60)).bg(Color::Reset)  "◆⠋12m04s⠸2m17s"
    7  Style::new().fg(Color::Rgb(193, 95, 60)).bg(Color::Reset).bold()  "Watch❯❯"
    4  Style::new().green().bg(Color::Reset)  "●●●●"
   22  Style::new().red().bg(Color::Reset)  "✗exit101:3testsfailed✗"
   80  Style::new().yellow().bg(Color::Reset)  "◐2◐askstowrite.github/wo"
